[metadata]
license_files = LICENSE
name = pm_qos_mgr
summary = PM QoS CPU wakeup latency manager for kubelet cpu-manager
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = http://www.starlingx.io/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    pm_qos_mgr

[entry_points]
console_scripts =
    pm-qos-mgr = pm_qos_mgr.pm_qos_mgr:main

[wheel]
universal = 1

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
