[metadata]
name = cgtsclient
summary = Titanium Cloud System Client and CLI
description-file =
    README.rst
author = WindRiver
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: windriver
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    cgtsclient

[entry_points]
console_scripts =
    system = cgtsclient.shell:main

[pbr]
autodoc_index_modules = False

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
