[metadata]
name = sysinv
summary = OpenStack Bare Metal Provisioning
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    sysinv

[entry_points]
console_scripts =
    sysinv-api = sysinv.cmd.api:main
    sysinv-agent = sysinv.cmd.agent:main
    sysinv-dbsync = sysinv.cmd.dbsync:main
    sysinv-conductor = sysinv.cmd.conductor:main
    sysinv-rootwrap = sysinv.openstack.common.rootwrap.cmd:main
    sysinv-dnsmasq-lease-update = sysinv.cmd.dnsmasq_lease_update:main
    sysinv-upgrade = sysinv.cmd.upgrade:main
    sysinv-puppet = sysinv.cmd.puppet:main
    sysinv-helm = sysinv.cmd.helm:main

systemconfig.puppet_plugins = 
    001_platform = sysinv.puppet.platform:PlatformPuppet
    002_interface = sysinv.puppet.interface:InterfacePuppet
    003_ovs = sysinv.puppet.ovs:OVSPuppet
    004_networking = sysinv.puppet.networking:NetworkingPuppet
    005_patching = sysinv.puppet.patching:PatchingPuppet
    006_mtce = sysinv.puppet.mtce:MtcePuppet
    007_keystone = sysinv.puppet.keystone:KeystonePuppet
    008_ldap = sysinv.puppet.ldap:LdapPuppet
    009_sysinv = sysinv.puppet.inventory:SystemInventoryPuppet
    010_nfv = sysinv.puppet.nfv:NfvPuppet
    011_ceph = sysinv.puppet.ceph:CephPuppet
    012_device = sysinv.puppet.device:DevicePuppet
    013_storage = sysinv.puppet.storage:StoragePuppet
    014_nova = sysinv.puppet.nova:NovaPuppet
    015_neutron = sysinv.puppet.neutron:NeutronPuppet
    016_horizon = sysinv.puppet.horizon:HorizonPuppet
    017_glance = sysinv.puppet.glance:GlancePuppet
    019_cinder = sysinv.puppet.cinder:CinderPuppet
    020_ceilometer = sysinv.puppet.ceilometer:CeilometerPuppet
    022_heat = sysinv.puppet.heat:HeatPuppet
    023_magnum = sysinv.puppet.magnum:MagnumPuppet
    024_murano = sysinv.puppet.murano:MuranoPuppet
    025_ironic = sysinv.puppet.ironic:IronicPuppet
    027_dcmanager = sysinv.puppet.dcmanager:DCManagerPuppet
    028_dcorch = sysinv.puppet.dcorch:DCOrchPuppet
    029_dcdbsync = sysinv.puppet.dcdbsync:DCDBsyncPuppet
    030_kubernetes = sysinv.puppet.kubernetes:KubernetesPuppet
    031_smapi = sysinv.puppet.smapi:SmPuppet
    032_fm = sysinv.puppet.fm:FmPuppet
    033_swift = sysinv.puppet.swift:SwiftPuppet
    034_barbican = sysinv.puppet.barbican:BarbicanPuppet
    035_dockerdistribution = sysinv.puppet.dockerdistribution:DockerDistributionPuppet
    036_pciirqaffinity = sysinv.puppet.pci_irq_affinity:PciIrqAffinityPuppet
    099_service_parameter = sysinv.puppet.service_parameter:ServiceParamPuppet

systemconfig.helm_applications =
    stx-openstack = systemconfig.helm_plugins.stx_openstack
    platform-integ-apps = systemconfig.helm_plugins.platform_integ_apps

systemconfig.helm_plugins.platform_integ_apps =
    001_helm-toolkit = sysinv.helm.helm_toolkit:HelmToolkitHelm
    002_rbd-provisioner = sysinv.helm.rbd_provisioner:RbdProvisionerHelm
    003_ceph-pools-audit = sysinv.helm.ceph_pools_audit:CephPoolsAuditHelm

systemconfig.helm_plugins.stx_openstack =
    001_ingress = sysinv.helm.ingress:IngressHelm
    002_mariadb = sysinv.helm.mariadb:MariadbHelm
    003_garbd = sysinv.helm.garbd:GarbdHelm
    004_rabbitmq = sysinv.helm.rabbitmq:RabbitmqHelm
    005_memcached = sysinv.helm.memcached:MemcachedHelm
    006_keystone = sysinv.helm.keystone:KeystoneHelm
    007_heat = sysinv.helm.heat:HeatHelm
    008_horizon = sysinv.helm.horizon:HorizonHelm
    009_glance = sysinv.helm.glance:GlanceHelm
    010_openvswitch = sysinv.helm.openvswitch:OpenvswitchHelm
    011_libvirt = sysinv.helm.libvirt:LibvirtHelm
    012_neutron = sysinv.helm.neutron:NeutronHelm
    013_nova = sysinv.helm.nova:NovaHelm
    014_nova-api-proxy = sysinv.helm.nova_api_proxy:NovaApiProxyHelm
    015_cinder = sysinv.helm.cinder:CinderHelm
    016_gnocchi = sysinv.helm.gnocchi:GnocchiHelm
    017_ceilometer = sysinv.helm.ceilometer:CeilometerHelm
    018_panko = sysinv.helm.panko:PankoHelm
    019_aodh = sysinv.helm.aodh:AodhHelm
    020_helm-toolkit = sysinv.helm.helm_toolkit:HelmToolkitHelm
    021_barbican = sysinv.helm.barbican:BarbicanHelm
    022_keystone-api-proxy = sysinv.helm.keystone_api_proxy:KeystoneApiProxyHelm

sysinv.agent.lldp.drivers =
    lldpd = sysinv.agent.lldp.drivers.lldpd.driver:SysinvLldpdAgentDriver
    ovs = sysinv.agent.lldp.drivers.ovs.driver:SysinvOVSAgentDriver

[pbr]
autodoc_index_modules = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sysinv/locale/sysinv.pot
