[metadata]
name = sysinv
summary = OpenStack Bare Metal Provisioning
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    sysinv

[entry_points]
console_scripts =
    sysinv-api = sysinv.cmd.api:main
    sysinv-agent = sysinv.cmd.agent:main
    sysinv-fpga-agent = sysinv.cmd.fpga_agent:main
    sysinv-dbsync = sysinv.cmd.dbsync:main
    sysinv-conductor = sysinv.cmd.conductor:main
    sysinv-rootwrap = oslo_rootwrap.cmd:main
    sysinv-dnsmasq-lease-update = sysinv.cmd.dnsmasq_lease_update:main
    sysinv-upgrade = sysinv.cmd.upgrade:main
    sysinv-puppet = sysinv.cmd.puppet:main
    sysinv-helm = sysinv.cmd.helm:main
    sysinv-utils = sysinv.cmd.utils:main
    cert-mon = sysinv.cmd.cert_mon:main
    cert-alarm = sysinv.cmd.cert_alarm:main
    sysinv-reset-n3000-fpgas = sysinv.cmd.reset_n3000_fpgas:main

systemconfig.puppet_plugins = 
    001_platform = sysinv.puppet.platform:PlatformPuppet
    002_interface = sysinv.puppet.interface:InterfacePuppet
    003_ovs = sysinv.puppet.ovs:OVSPuppet
    004_networking = sysinv.puppet.networking:NetworkingPuppet
    005_patching = sysinv.puppet.patching:PatchingPuppet
    006_mtce = sysinv.puppet.mtce:MtcePuppet
    007_keystone = sysinv.puppet.keystone:KeystonePuppet
    008_ldap = sysinv.puppet.ldap:LdapPuppet
    009_sysinv = sysinv.puppet.inventory:SystemInventoryPuppet
    010_nfv = sysinv.puppet.nfv:NfvPuppet
    011_ceph = sysinv.puppet.ceph:CephPuppet
    012_device = sysinv.puppet.device:DevicePuppet
    013_storage = sysinv.puppet.storage:StoragePuppet
    016_horizon = sysinv.puppet.horizon:HorizonPuppet
    027_dcmanager = sysinv.puppet.dcmanager:DCManagerPuppet
    028_dcorch = sysinv.puppet.dcorch:DCOrchPuppet
    029_dcdbsync = sysinv.puppet.dcdbsync:DCDBsyncPuppet
    030_kubernetes = sysinv.puppet.kubernetes:KubernetesPuppet
    031_smapi = sysinv.puppet.smapi:SmPuppet
    032_fm = sysinv.puppet.fm:FmPuppet
    034_barbican = sysinv.puppet.barbican:BarbicanPuppet
    035_dockerdistribution = sysinv.puppet.dockerdistribution:DockerDistributionPuppet
    036_pciirqaffinity = sysinv.puppet.pci_irq_affinity:PciIrqAffinityPuppet
    038_certmon = sysinv.puppet.certmon:CertMonPuppet
    039_helm = sysinv.puppet.helm:HelmPuppet
    040_rook = sysinv.puppet.rook:RookPuppet
    041_certalarm = sysinv.puppet.certalarm:CertAlarmPuppet
    099_service_parameter = sysinv.puppet.service_parameter:ServiceParamPuppet

systemconfig.armada.manifest_ops =
    generic = sysinv.helm.manifest_generic:GenericArmadaManifestOperator

systemconfig.app_lifecycle =
    generic = sysinv.helm.lifecycle_generic:GenericAppLifecycleOperator

sysinv.agent.lldp.drivers =
    lldpd = sysinv.agent.lldp.drivers.lldpd.driver:SysinvLldpdAgentDriver
    ovs = sysinv.agent.lldp.drivers.ovs.driver:SysinvOVSAgentDriver

[pbr]
autodoc_index_modules = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sysinv/locale/sysinv.pot
